versioned_docs/version-2.8/reference/goals/list.mdx
---
title: list
description: |
  Lists all targets matching the file or target arguments.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants list [args]
```

Lists all targets matching the file or target arguments.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[list]`</span>

<span className={styles.options}>

## Basic options

### `output_file`

<Option
  cli_repr={`--list-output-file=<path>`}
  env_repr='PANTS_LIST_OUTPUT_FILE'
  toml_repr={`[list]
output_file = <path>`}
  default_repr={`None`}
>

Output the goal&#x27;s stdout to this file. If unspecified, outputs to stdout.

</Option>

### `sep`

<Option
  cli_repr={`--list-sep=<separator>`}
  env_repr='PANTS_LIST_SEP'
  toml_repr={`[list]
sep = <separator>`}
  default_repr={`\\n`}
>

String to use to separate lines in line-oriented output.

</Option>

### `documented`

<Option
  cli_repr={`--[no-]list-documented`}
  env_repr='PANTS_LIST_DOCUMENTED'
  toml_repr={`[list]
documented = <bool>`}
  default_repr={`False`}
>

Print only targets that are documented with a description.

</Option>

## Advanced options

None

## Deprecated options

### `provides`

<Option
  cli_repr={`--[no-]list-provides`}
  env_repr='PANTS_LIST_PROVIDES'
  toml_repr={`[list]
provides = <bool>`}
  default_repr={`False`}
  removal_version='2.9.0.dev0'
  removal_hint={'Filter on python distributions instead: ./pants filter --target-type=python_distribution ::<br />'}
>

List only targets that provide an artifact.

</Option>

## Related subsystems

None

</span>
